fixed whitespace issue

--- a/css/main.css
+++ b/css/main.css
@@ -182,17 +182,17 @@ body {
 }
 
 .desc-join p {
-  font: normal 400 16px 'Roboto';
+  font-size: 1rem;
   margin-bottom: 5px;
 }
 
 .btn-join {
-  width: 360px;
-  height: 80px;
+  width: 200px;
+  height: 50px;
+  font: normal 700 1.5rem 'Roboto';
   background: var(--color-button);
   border-radius: 10px;
   border: none;
-  font: normal 700 36px 'Roboto';
   line-height: 34px;
   color: var(--color-text);
   display: flex;
@@ -608,6 +608,10 @@ footer {
     margin: 40px 2px;
   }
 
+  .desc-join p {
+    font-size: 1.25rem;
+  }
+
   .description-content {
     padding: 0px 250px 90px;
   }
@@ -620,6 +624,13 @@ footer {
 
   .features-content {
     font-size: 1.25rem;
+  }
+
+  .btn-join {
+    margin-top: 75px;
+    width: 360px;
+    height: 80px;
+    font: normal 700 2.25rem 'Roboto';
   }
 }
 
@@ -770,12 +781,6 @@ footer {
 @media (max-width: 79em) {
   .cta-form input {
     width: 75%;
-  }
-
-  .btn-join {
-    width: 200px;
-    height: 50px;
-    font: normal 700 23px 'Roboto';
   }
 }
 
